fix(TDP-3614): min-height and flexbox are causing pbm on IE (#627)
* fix(TDP-3614): min-height and flexbox are causing pbm on IE

* fix(TDP-3614): used a wrapper hack

--- a/dataprep-webapp/src/app/components/widgets-containers/inventory-list/inventory-list-container.scss
+++ b/dataprep-webapp/src/app/components/widgets-containers/inventory-list/inventory-list-container.scss
@@ -60,12 +60,19 @@ $x-large-screen: 120em !default;
 }
 
 .fetch-loader {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	min-height: 50vh;
+	&,
+	&-wrapper {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 
-	.fetch-loader-icon + span {
+	&-wrapper {
+		flex-direction: column;
+		height: 100%;
+	}
+
+	&-icon + span {
 		padding-left: 20px;
 	}
 }
